--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> FBI Agent Merlot's Area </title>
+		<title> DETECTIVE CONAN FANBASE </title>
 		<style>
 		 	#conan-characters {color:rgb(154, 39, 85);}
 			#favourite-conan-char {color:green;}
