--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                         <-- Above code copied from https://stackoverflow.com/questions/40557461/rainbow-gradient-on-text-in-css -->	
                                     
 		</style>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154140983-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154140983-1');
+</script>
 	</head>
 	<body>
 		<h1 id="welcome"> DETECTIVE CONAN FANBASE </h1>
