--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   gtag('config', 'UA-154140983-1');
 </script>
+<script data-ad-client="ca-pub-9007395533924291" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<h1 id="welcome"> DETECTIVE CONAN FANBASE </h1>
