--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title> DETECTIVE CONAN FANBASE </title>
+<meta name="description" content="It's Merlot's area">
 		<style>
 		 	#conan-characters {color:rgb(154, 39, 85);}
 			#favourite-conan-char {color:green;}
