--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> DETECTIVE CONAN FANBASE </title>
-<meta name="description" content="It's Merlot's area">
+		<meta name="description" content="This is a Detective Conan Fanbase made by Agent Merlot. (in devoloping stage tho)">
 		<style>
 		 	#conan-characters {color:rgb(154, 39, 85);}
 			#favourite-conan-char {color:green;}
