--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> DETECTIVE CONAN FANBASE </title>
 		<meta name="description" content="This is a Detective Conan Fanbase made by Agent Merlot. (in devoloping stage tho)">
-		<link rel='icon' href='https://cdn.discordapp.com/attachments/652332646826770445/652433095722795028/PicsArt_12-06-02.53.52.png' type='image/x-icon'/ >
+		<link rel='icon' width="16" href='https://cdn.discordapp.com/attachments/652332646826770445/652433095722795028/PicsArt_12-06-02.53.52.png' type='image/x-icon'/ >
 		<style>
 		 	#conan-characters {color:rgb(154, 39, 85);}
 			#favourite-conan-char {color:green;}
