--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   gtag('config', 'UA-154140983-1');
 </script>
 <script data-ad-client="ca-pub-9007395533924291" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5df349ff92732d0012e2849b&product=inline-share-buttons" async="async"></script>
 	</head>
 	<body>
 		<h1 id="welcome"> DETECTIVE CONAN FANBASE </h1>
@@ -82,6 +83,7 @@
                     </tr>
                 </table>
                 <font size = 20> <a target="_blank" href="https://www.fbi.gov/"> WANNA VISIT THE FBI WEBSITE???? </a> </font>
+		<div class="sharethis-inline-share-buttons"></div>
            
 	</body>
 </html>
